    2) If a plane only has the 'canSubmerge' tag set to 1, it will land on the ocean floor.
    3) If a plane has both tags set to 1, it will obey rule 2.

- Fixed the factory cancelled-build delay bug.
- Fixed units get stuck while guarding factories bug.
- Fixed planes can't find landing pad on large maps bug.

- Fixed in game video creation (default binding F10).

0.74b2

- Planes can land on water surface if FBI tag floater is set to true.

- Added GROUND_WATER_HEIGHT (78) to get in cob script.
  Same as GROUND_HEIGHT (16) but in water it returns negative water depth instead of 0.

- Units don't slowdown on intermediate waypoints anymore.

- Added mingw compatible crashhandler.

- Fixed sharebox and quitbox for 16 players.
- Fixed FPS mode aiming to the northwest.
- Fixed FPU control word assertion that made spring unplayable with some sound drivers.

- Added sorting options to "/info", you can use names or numbers:
  0 - "off",   disable display
  1 - "ally",  allies  (you, your team, your allyteam, your enemies, then spectators)
  2 - "team",  player team id
  3 - "name",  player name alphabetic sort
  4 - "cpu",   player cpu usage
  5 - "ping",  player ping time

- Added the "maxparticles <value>"       action
- Added the "minimap simplecolors [0|1]" action
- Added the "specfullview [0|1]"         action
  (setting it to 0 gives the same minimap and viewport visibility as the selected team)

- Added "OverheadTiltSpeed" config parameter

- Fixed the unit-limit vs. sharing bug

- Shadow mapping works for SM3

0.74b1

- Linux vs Windows is now synced if binaries are built using gcc 4.0 or higher.

- Games with more then 10 players now work properly.
- Several improvements and fixes for autohosting, including a .kickbynum command.

- Added minimap commands (two modes, see the MiniMapFullProxy config param)

- Added "MiniMapGeometry" config parameter
- Added "TooltipGeometry" config parameter
- Added "TooltipOutlineFont" config parameter